fix mobile nav background and z-index

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -125,6 +125,7 @@
   position: absolute;
   top: calc(100% + 1.5rem);
   right: 0;
+  z-index: 10;
 
   display: flex;
   flex-direction: column;
@@ -137,6 +138,7 @@
   border-radius: 0.8rem;
 
   background-color: rgba($white-97, 0.32);
+  backdrop-filter: blur(1.6rem);
 
   white-space: nowrap;
 
